[EFL] ewk_view_page_contents_get() API test is flaky https://bugs.webkit.org/show_bug.cgi?id=144683

Reviewed by Gyuyoung Kim.

Callback of WKPageGetContentsAsMHTMLData contains WKData which does not contain null terminated character.

* UIProcess/API/efl/ewk_view.cpp: Pass the data of string instead of WKData directly.
(ewkViewPageContentsAsMHTMLCallback):


Canonical link: https://commits.webkit.org/162742@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183908 268f45cc-cd09-0410-ab3c-d52691b4dbfc